# llm-zoomcamp

./: main.ipynb  pyproject.toml
cohorts/2025/01-intro/: homework.md
mine/: hw1.ipynb
mine/docker/es/: compose.yml
mine/docker/pgai/: README.md  compose.yaml  main.ipynb
